--- a/FrontEnd/home.html
+++ b/FrontEnd/home.html
@@ -3,147 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Royale Cuisine</title>
-
-    <!-- Bootstrap 5 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
+    <title>Byte Bites - Premium Restaurant</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+<body class="home-page">
+    <div id="navbar-placeholder"></div>
 
-<body>
+    <!-- Hero Section -->
+    <section class="wilma-hero-section" id="home">
+        <div class="wilma-hero-content">
+            <p class="wilma-hero-subtitle">MORE FLAVOR FOR LESS</p>
+            <h1 class="wilma-hero-title">Taste The<br>Difference</h1>
+            <p class="wilma-hero-description"><strong>Discover a culinary journey like no other, where every dish is thoughtfully prepared to create unforgettable moments of indulgence."</strong></p>
+            <a class="btn wilma-btn-custom" href="Menu.html">Menu</a>
 
-<!-- Navbar -->
-<nav class="navbar navbar-dark navbar-expand-lg py-3 border-bottom border-secondary">
-    <div class="container">
-        <a class="navbar-brand fw-bold" href="#">Benoit</a>
-        <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navMenu">
-            <ul class="navbar-nav ms-auto gap-3">
-                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Pages</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Shop</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Contacts</a></li>
-            </ul>
-            <a class="btn btn-outline-warning ms-3 px-4" href="#">Book a Table</a>
         </div>
-    </div>
-</nav>
+    </section>
 
-<!-- Hero Section -->
-<section class="hero-section text-center text-white">
-    <div class="overlay"></div>
-    <div class="container position-relative">
-        <h6 class="text-uppercase mb-3">Welcome to Our Restaurant</h6>
-        <h1 class="display-4 fw-bold">Taste Royale Cuisine</h1>
-        <p class="mt-3 mb-4 w-75 mx-auto text-light">
-            Our restaurant offers an elegant space reflecting modern cuisine inspired dishes.
-        </p>
-        <a href="#" class="btn btn-outline-light px-4">Discover More</a>
-    </div>
-</section>
-
-<!-- Features -->
-<section class="features py-5 text-white">
-    <div class="container">
-        <div class="row text-center">
-            <div class="col-md-3">
-                <i class="bi bi-basket feature-icon"></i>
-                <h5 class="mt-3">Fresh Products</h5>
-                <p>Highest quality ingredients.</p>
-            </div>
-            <div class="col-md-3">
-                <i class="bi bi-people feature-icon"></i>
-                <h5 class="mt-3">Skilled Chefs</h5>
-                <p>Master chefs preparing dishes.</p>
-            </div>
-            <div class="col-md-3">
-                <i class="bi bi-cup-straw feature-icon"></i>
-                <h5 class="mt-3">Best Bar</h5>
-                <p>Premium drinks and cocktails.</p>
-            </div>
-            <div class="col-md-3">
-                <i class="bi bi-heart feature-icon"></i>
-                <h5 class="mt-3">Vegan Cuisine</h5>
-                <p>Diverse vegan-friendly menu.</p>
+    <!-- About Section -->
+    <section class="wilma-about-section" id="about">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 mb-4 mb-lg-0">
+                    <img src="resturant.jpg" alt="Restaurant Interior" class="wilma-about-image">
+                </div>
+                <div class="col-lg-6">
+                    <p class="wilma-section-subtitle">Your Special Occasion Destination</p>
+                    <h2 class="wilma-section-title">A haven of exquisite flavors, where every bite transforms an ordinary moment into a <em>cherished</em> memory.</h2>
+                    <div class="wilma-decorative-line"></div>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<!-- About Section -->
-<section class="about py-5">
-    <div class="container text-white">
-        <div class="row align-items-center">
-            <div class="col-md-6">
-                <img src="https://images.unsplash.com/photo-1533777324565-a040eb52fac1"
-                     class="img-fluid rounded shadow">
-            </div>
-            <div class="col-md-6">
-                <h2 class="fw-bold mb-3">Between Heaven & Earth</h2>
-                <p class="mb-3">
-                    Our philosophy blends modern flavors with traditional recipes crafted by fireside cooking.
-                </p>
-                <p>
-                    Whisper to us about your feelings, and we will prepare what you need.
-                </p>
-                <a class="btn btn-outline-light mt-3 px-4">Discover More</a>
+    <!-- Chef Recommendation Section -->
+    <section class="wilma-chef-section" id="menus">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 mb-4 mb-lg-0">
+                    <div class="wilma-chef-card">
+                        <p class="wilma-section-subtitle">Delight in Every Bite</p>
+                        <h3>Our Chef Recommend</h3>
+                        <p class="mariam">Golden-crisp chicken bites, free-range and artfully spiced, paired with hand-crafted dipping sauces. Farm-to-table flavor, elevated with a touch of gourmet flair.</p>
+                        <button class="btn wilma-btn-custom">View Menus</button>
+                    </div>
+                </div>
+                <div class="col-lg-6 text-center">
+                    <img src="dish.png" alt="C
+                    hef Special Dish" class="wilma-dish-image">
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<!-- Menu -->
-<section class="menu py-5 text-white">
-    <div class="container">
-        <h2 class="text-center fw-bold mb-5">Try Our Special Offers</h2>
-
-        <div class="row">
-            <div class="col-md-6">
-                <ul class="list-group menu-list">
-                    <li class="list-group-item d-flex justify-content-between">
-                        Raw Scallops from Erquy <span>$38</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between">
-                        Sea Bass Ceviche <span>$42</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between">
-                        Tender Octopus & Fennel <span>$39</span>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="col-md-6">
-                <ul class="list-group menu-list">
-                    <li class="list-group-item d-flex justify-content-between">
-                        Viennese Veal Cutlet <span>$58</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between">
-                        Pan-Seared Veal Liver <span>$49</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between">
-                        Grilled Veal Filet Mignon <span>$62</span>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-<!-- Custom JS -->
-<script src="script.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
