--- a/FrontEnd/cart/checkout.html
+++ b/FrontEnd/cart/checkout.html
@@ -4,48 +4,40 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Checkout</title>
-
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-light p-4">
-<div class="container bg-white p-4 rounded shadow">
-  <h2 class="mb-4">Checkout</h2>
+<body class="soft-bg">
+  <div class="container-box">
+    <h2 class="page-title">Checkout</h2>
 
-  <form id="checkoutForm" class="row g-3">
-    <div class="col-md-6">
-      <label class="form-label">Full Name</label>
-      <input id="fullName" type="text" class="form-control" required>
+    <form id="checkoutForm" class="form-box">
+      <label>Full Name</label>
+      <input type="text" class="form-control" id="fullName" required>
+
+      <label>Phone Number</label>
+      <input type="text" class="form-control" id="phone" required>
+
+      <label>Address</label>
+      <input type="text" class="form-control" id="address" required>
+
+      <label>Payment Method</label>
+      <select class="form-select" id="paymentMethod">
+        <option value="cash">Cash on Delivery</option>
+        <option value="card">Credit / Debit Card</option>
+      </select>
+    </form>
+
+    <div class="summary-box">
+      <h4>Payment Summary</h4>
+      <p>Subtotal: <span id="sumSubtotal">0</span> EGP</p>
+      <p>Tax (14%): <span id="tax">0</span> EGP</p>
+      <p class="total-amount">Total: <span id="sumTotal">0</span> EGP</p>
     </div>
 
-    <div class="col-md-6">
-      <label class="form-label">Phone Number</label>
-      <input id="phone" type="text" class="form-control" required>
-    </div>
+    <button class="btn-gold" onclick="placeOrder()">Place Order</button>
+  </div>
 
-    <div class="col-12">
-      <label class="form-label">Address</label>
-      <input id="address" type="text" class="form-control" required>
-    </div>
-
-    <div class="col-12">
-      <label class="form-label">Payment Method</label>
-      <select class="form-select" id="paymentMethod"></select>
-    </div>
-  </form>
-
-  <hr>
-
-  <h4>Order Summary</h4>
-  <div id="orderSummary"></div>
-
-  <h4 class="mt-3">Payment Summary</h4>
-  <div id="paymentSummary" class="summary-box"></div>
-
-  <button class="btn btn-success mt-3" onclick="placeOrder()">Place Order</button>
-</div>
-
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
