--- a/FrontEnd/mariam/home.html
+++ b/FrontEnd/mariam/home.html
@@ -6,7 +6,7 @@
     <title>Byte Bites - Premium Restaurant</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="home.css">
 </head>
 <body class="home-page">
     <div id="navbar-placeholder"></div>
