--- a/FrontEnd/mariam/footer.html
+++ b/FrontEnd/mariam/footer.html
@@ -1,4 +1,5 @@
 <!-- Footer Section - ضيفي ده في آخر index.html قبل </body> -->
+ <html>
 <footer class="wilma-footer">
     <div class="container">
         <div class="row">
@@ -42,5 +43,5 @@
         </div>
     </div>
 </footer>
-
+/html>
   
