--- a/FrontEnd/mariam/footer.html
+++ b/FrontEnd/mariam/footer.html
@@ -1,5 +1,9 @@
 <!-- Footer Section - ضيفي ده في آخر index.html قبل </body> -->
  <html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
 <footer class="wilma-footer">
     <div class="container">
         <div class="row">
@@ -43,5 +47,7 @@
         </div>
     </div>
 </footer>
-/html>
+<script src="script.js"></script>
+    </body>
+</html>
   
