--- a/FrontEnd/mariam/home.html
+++ b/FrontEnd/mariam/home.html
@@ -6,7 +6,7 @@
     <title>Byte Bites - Premium Restaurant</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="home-page">
     <div id="navbar-placeholder"></div>
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-4 mb-lg-0">
-                    <img src="resturant.jpg" alt="Restaurant Interior" class="wilma-about-image">
+                    <img src="photo/resturant.jpg" alt="Restaurant Interior" class="wilma-about-image">
                 </div>
                 <div class="col-lg-6">
                     <p class="wilma-section-subtitle">Your Special Occasion Destination</p>
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 text-center">
-                    <img src="dish.png" alt="C
+                    <img src="photo/dish.png" alt="C
                     hef Special Dish" class="wilma-dish-image">
                 </div>
             </div>
