--- a/FrontEnd/mariam/navbar.html
+++ b/FrontEnd/mariam/navbar.html
@@ -9,14 +9,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg wilma-navbar" id="navbar">
     <div class="container">
         <a class="navbar-brand" >
-            <img src="logo-removebg-preview.png" alt="Byte Bites Logo" class="navbar-logo">
+            <img src="photo/logo-removebg-preview.png" alt="Byte Bites Logo" class="navbar-logo">
         </a>
         
         <a class="navbar-brand wilma-brand" href="#">Byte Bites</a>
