--- a/FrontEnd/mariam/login.html
+++ b/FrontEnd/mariam/login.html
@@ -15,7 +15,7 @@
             
             <div>
                 <div class="hero-image">
-                    <img src="download (2).jpg" alt="restaurant Image">
+                    <img src="photo/download (2).jpg" alt="restaurant Image">
                 </div>
             </div>
         </div>
