--- a/FrontEnd/mariam/Menu.html
+++ b/FrontEnd/mariam/Menu.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="menu">
-  <div id="navbar"></div>
+  <div id="navbar-placeholder"></div>
 
   <div class="container">
     <h2 class="page-title">Menu</h2>
