--- a/FrontEnd/mariam/navbar.html
+++ b/FrontEnd/mariam/navbar.html
@@ -25,9 +25,9 @@
         </button>
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link byte-nav-link" href="#home">Home</a></li>
+                <li class="nav-item"><a class="nav-link byte-nav-link" href="home.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link byte-nav-link" href="#about">About</a></li>
-                <li class="nav-item"><a class="nav-link byte-nav-link" href="#contact">login</a></li>
+                <li class="nav-item"><a class="nav-link byte-nav-link" href="login.html">login</a></li>
                 <li class="nav-item"><a class="nav-link byte-nav-link" href="Menu.html">Menu</a></li>
                 <li class="nav-item"><a class="nav-link byte-nav-link" href="#reservation">cart</a></li>
                 <li class="nav-item"><a class="nav-link byte-nav-link" href="#contact">Contact</a></li>
