--- a/FrontEnd/admin/orders.html
+++ b/FrontEnd/admin/orders.html
@@ -46,11 +46,10 @@
   <div class="sidebar">
     <div class="logo">BYTE BITES</div>
     <a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a>
+    <a href="products.html"><i class="bi bi-box-seam"></i> products</a>
     <a href="orders.html" class="active"><i class="bi bi-cart-check"></i> Orders</a>
     <a href="categories.html"><i class="bi bi-grid-3x3-gap"></i> Categories</a>
-    <a href="products.html"><i class="bi bi-journal-text"></i> Menu</a>
-    <a href="#"><i class="bi bi-bar-chart-line"></i> Reports</a>
-    <a href="#" style="margin-top: auto;"><i class="bi bi-box-arrow-right"></i> Logout</a>
+    <a href="login.html  " style="margin-top: auto;"><i class="bi bi-box-arrow-right"></i> Logout</a>
   </div>
 
   <div class="main-content">
