--- a/FrontEnd/Menu.html
+++ b/FrontEnd/Menu.html
@@ -8,13 +8,13 @@
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-  <div id="navbar"></div>
+<body class="menu">
+  <div id="navbar-placeholder"></div>
 
   <div class="container">
-    <h2 class="page-title">Menu</h2>
+    <h2 class="page-title" style="padding: 60px;">Menu</h2>
 
-    <!-- FILTER BUTTONS -->
+    <!-- filter buttons -->
     <div class="d-flex flex-wrap gap-2 mb-4 justify-content-center" id="filter-buttons">
       <button class="filter-btn active" data-category="all">All</button>
       <button class="filter-btn" data-category="pizza">Pizza</button>
@@ -24,7 +24,7 @@
       <button class="filter-btn" data-category="dessert">Desserts</button>
     </div>
 
-    <!-- PRODUCTS -->
+    <!-- products -->
     <div class="row g-4" id="products-container"></div>
   </div>
 
